--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "install": "^0.13.0",
     "jquery": "^3.7.1",
     "material-react-table": "^2.0.5",
+    "mysql2": "^3.9.1",
     "next": "^13.5.6",
+    "next-auth": "^4.24.5",
     "nextjs": "^0.0.3",
     "npm": "^10.2.4",
     "pg": "^8.11.3",
