--- a/package.json
+++ b/package.json
@@ -30,13 +30,18 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.2",
     "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.0.3",
+    "fs": "^0.0.1-security",
     "install": "^0.13.0",
     "jquery": "^3.7.1",
     "material-react-table": "^2.0.5",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
     "next": "^13.5.6",
     "nextjs": "^0.0.3",
     "npm": "^10.2.4",
+    "path": "^0.12.7",
     "pg": "^8.11.3",
     "postcss": "8.4.30",
     "react": "^18.2.0",
@@ -47,6 +52,7 @@
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.20.0",
     "react-table": "^7.8.0",
     "simplebar-react": "^3.2.4",
