--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "jquery": "^3.7.1",
     "material-react-table": "^2.0.5",
     "multer": "^1.4.5-lts.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.9.1",
     "next": "^13.5.6",
     "nextjs": "^0.0.3",
     "npm": "^10.2.4",
